--- a/MafiaGameGenerator.vcxproj.filters
+++ b/MafiaGameGenerator.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="MafiaGameGenerator.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Role.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Role.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
