--- a/MafiaGameGenerator.vcxproj
+++ b/MafiaGameGenerator.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="MafiaGameGenerator.cpp" />
+    <ClCompile Include="Role.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Role.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
